# rules-lint-prettier-format-test-example

./: BUILD.bazel  MODULE.bazel  README.md  index.js  package.json  pnpm-lock.yaml
tools/format/: BUILD.bazel
